# flowify-BE

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.docs/: BACKEND_ARCHITECTURE.md  BUGFIX_REPORT.md  CANVAS_DRIVE_TRANSFER_UPDATE.md  CANVAS_TERM_ALL_FILES_RUNTIME_FIX.md  CONVENTION.md  DEVELOPMENT_PLAN.md  DOCUMENT_CONTENT_RUNTIME_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  DOCUMENT_CONTENT_RUNTIME_GMAIL_OCR_VISION_IMPLEMENTATION_HANDOFF.md  DOCUMENT_CONTENT_RUNTIME_GMAIL_OCR_VISION_SPRING_BOOT_HANDOFF.md  DOCUMENT_CONTENT_RUNTIME_IMPLEMENTATION_REPORT.md  DOCUMENT_CONTENT_RUNTIME_SPRING_FASTAPI_COMPATIBILITY_CHECK.md  FASTAPI_ADVANCED_FEATURES_PLAN.md  FASTAPI_AI_NODE_STRATEGY_GUARD_DESIGN.md  FASTAPI_CONTRACT_SPEC.md  FASTAPI_CORE_ENGINE_PLAN.md  FASTAPI_FILE_TYPE_BRANCH_EXECUTION_DESIGN.md  FASTAPI_GOOGLE_SHEETS_NODE_DESIGN.md  FASTAPI_IMPLEMENTATION_GUIDE.md  FASTAPI_LOOP_ONE_BY_ONE_EXECUTION_DESIGN.md  FASTAPI_OVERVIEW_AND_SETUP.md  FASTAPI_SERVICE_TOKEN_MANAGEMENT_DESIGN.md  FASTAPI_SPRINGBOOT_API_SPEC.md  FASTAPI_WORKFLOW_LIST_AUTO_RUN_TOGGLE_DESIGN.md  FASTAPI_WORKFLOW_TRIGGER_SETTINGS_DESIGN.md  GITHUB_NODE_DESIGN.md  GMAIL_HEADER_ENCODING_FIX_DESIGN.md  GMAIL_NODE_ERROR_FASTAPI_REQUEST.md  GMAIL_NODE_ERROR_SPRING_BOOT_REQUEST.md  GMAIL_NODE_OPTION_C_IMPLEMENTATION_PLAN.md  GMAIL_SENDER_DISPLAY_NAME_DESIGN.md  GOOGLE_DRIVE_COURSE_SUBFOLDER_UPLOAD.md  INTEGRATION_TEST_REPORT.md  MAIL_SUMMARY_SINGLE_RESULT_AGGREGATION_PLAN.md  PERFORMANCE_METRICS.md  PR5_MERGE_REPORT.md  PROJECT_ANALYSIS.md  RUNTIME_CONTENT_BRANCH_LOOP_FIX_DESIGN.md  TASK_A_NODE_INTEGRATION.md  TASK_B_ENGINE_SCHEDULER.md  TASK_C_SNAPSHOT_ADVANCED.md  (+2 more)
app/: config.py  main.py
tests/: conftest.py  test_canvas_lms.py  test_data_filter_node.py  test_errors.py  test_execution_api.py  test_executor.py  test_feed_discovery.py  test_google_sheets_common.py  test_health.py  test_input_node.py  test_integration_node.py  test_llm_api.py  test_llm_node.py  test_llm_service.py  test_logic_node.py  test_loop_node.py  test_middleware.py  test_models.py  test_naver_news.py  test_node_factory.py  test_output_node.py  test_passthrough_node.py  test_preview_executor.py  test_rss_feed.py  test_safe_http.py  test_scheduler.py  test_snapshot.py  test_source_freshness_service.py  test_spring_callback_service.py  test_state.py  test_trigger_api.py  test_vector_service.py  test_web_news.py  (+1 more)
(+72 files in other folders)
